feat: add user pagination and search
